# aligator_kd_mpc

./: CMakeLists.txt  model_test.py  test.cpp  test_utils.hpp  visualize_foot.py  visualize_foot_trajectory.py  visualize_trajectory.py
config/: parm.yaml
include/: centroidal-dynamics.hpp  ctrl_component.hpp  foot-trajectory.hpp  fulldynamics.hpp  fwd.hpp  interpolator.hpp  kinodynamics.hpp  kinodynamics_ocp.hpp  lowlevel-control.hpp  mpc.hpp  ocp-handler.hpp  robot-handler.hpp  robot_handler.hpp  types.hpp  webots_interface.hpp
include/mpc/: kinodynamics.hpp  mpc.hpp  ocp.hpp
include/planner/: foot-trajectory.hpp  foot_planner.hpp  gait_schedule.hpp
include/utils/: logger.hpp  project_path.hpp  yaml_loader.hpp
include/wbc/: relaxed_wbc.hpp  task.hpp  wbc_base.hpp  weighted_wbc.hpp
robot/galileo_mini/: robot.urdf
robot/galileo_mini/srdf/: galileo_mini.srdf
robot/galileo_mini/urdf/: galileo_mini.urdf
src/: centroidal-dynamics.cpp  foot-trajectory.cpp  fulldynamics.cpp  interpolator.cpp  kinodynamics.cpp  lowlevel-control.cpp  main.cpp  mpc.cpp  ocp-handler.cpp  robot-handler.cpp  webots_interface.cpp  yaml_loader.cpp
src/mpc/: interpolator.cpp  kinodynamics.cpp  mpc.cpp  ocp.cpp
src/planner/: foot-trajectory.cpp  foot_planner.cpp  gait_schedule.cpp
src/utils/: logger.cpp
src/wbc/: relaxed_wbc.cpp  wbc_base.cpp  weighted_wbc.cpp
